paid/force-app/main/default/objects/Paid_Invoice__c/Paid_Invoice__c.object-meta.xml
<CustomObject>
    <label>Paid_Invoice</label>
    <nameField>
        <label>Paid_Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid_Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>