paid/force-app/main/default/objects/Paid_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Paid_Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Paid_Invoices</relationshipLabel>
    <relationshipName>Paid_Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>