paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Action__c.field-meta.xml
<CustomField>
    <fullName>Paid_Action__c</fullName>
    <label>Paid_Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel Rebill</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>