paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_AR_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_AR_Status__c</fullName>
    <label>Paid_AR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel and Rebill</fullName>
            </value>
            <value>
                <fullName>Credited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>