paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_BillToContact__c.field-meta.xml
<CustomField>
    <fullName>Paid_BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid_Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Paid_Invoices</relationshipLabel>
    <relationshipName>Paid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>