paid/force-app/main/default/objects/Paid_Invoice__c/fields/PAID_ContactExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_ContactExternalID__c</fullName>
    <label>PAID_ContactExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>