paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Corrective_Action_Payment_Run__c.field-meta.xml
<CustomField>
    <fullName>Paid_Corrective_Action_Payment_Run__c</fullName>
    <label>Paid_Corrective Action (Payment Run)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ActionRequired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>