paid/force-app/main/default/objects/Paid_Invoice__c/fields/PAID_CustomerExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_CustomerExternalID__c</fullName>
    <label>PAID CustomerExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>