paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Days_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Paid_Days_Outstanding__c</fullName>
    <formula>Today() -  Paid_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid_Days Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>