paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Declined_Payment_Count_Payment_Run__c.field-meta.xml
<CustomField>
    <fullName>Paid_Declined_Payment_Count_Payment_Run__c</fullName>
    <label>Paid_Declined Payment Count (Payment Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>