paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Due_Date__c</fullName>
    <label>Paid_Due Date</label>
    <type>Date</type>
</CustomField>