paid/force-app/main/default/objects/Paid_Invoice__c/fields/PAID_Invoice_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>PAID_Invoice_Creation_Status__c</fullName>
    <label>PAID Invoice Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>