paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Invoice_Locked__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid_Invoice Locked</label>
    <type>Checkbox</type>
</CustomField>