paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Number__c</fullName>
    <displayFormat>INV-{0000}</displayFormat>
    <label>Paid_Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>