paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Invoice_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Posted_Date__c</fullName>
    <label>Paid_Invoice Posted Date</label>
    <type>Date</type>
</CustomField>