paid/force-app/main/default/objects/Paid_Invoice__c/fields/PAID_InvoiceExternalID__c.field-meta.xml
<CustomField>
    <fullName>PAID_InvoiceExternalID__c</fullName>
    <label>PAID InvoiceExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>