paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Order__c.field-meta.xml
<CustomField>
    <fullName>Paid_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Paid_Invoices</relationshipLabel>
    <relationshipName>Paid_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>