paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Batch__c</fullName>
    <label>Paid_Payment Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch 1</fullName>
            </value>
            <value>
                <fullName>Batch 2</fullName>
            </value>
            <value>
                <fullName>Batch 3</fullName>
            </value>
            <value>
                <fullName>Batch 4</fullName>
            </value>
            <value>
                <fullName>Batch 5</fullName>
            </value>
            <value>
                <fullName>Batch 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>