paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Payment_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Process_Status__c</fullName>
    <label>Paid Payment Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>