paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Payment_Run_Processing_Message__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment_Run_Processing_Message__c</fullName>
    <label>Paid Payment Run Processing Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>