paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Target_Date__c</fullName>
    <label>Paid_Target Date</label>
    <type>Date</type>
</CustomField>