paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_Tax_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Error_Message__c</fullName>
    <label>Paid_Tax Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>