paid/force-app/main/default/objects/Paid_Invoice__c/fields/Paid_TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>Paid_TaxStatus__c</fullName>
    <label>Paid_TaxStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>