paid/force-app/main/default/objects/Paid_Invoice__c/fields/Sent_Invoice_to_PAID__c.field-meta.xml
<CustomField>
    <fullName>Sent_Invoice_to_PAID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent Invoice to PAID</label>
    <type>Checkbox</type>
</CustomField>