paid/force-app/main/default/objects/Paid_Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rebilled</fullName>
            </value>
            <value>
                <fullName>Post In progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>